Climate diagram + page background

--- a/src/frontend/destination_search/templates/base.html
+++ b/src/frontend/destination_search/templates/base.html
@@ -210,7 +210,7 @@
     </script>
 
     <!-- Slider widget with histogram -->
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script> <!-- D3.js also for other plotting -->
     <script>
         function rangeSlider(containerId, minFieldId, maxFieldId, data, format, suffix) {
 
