--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -23,10 +23,26 @@ body {
 }
 
 .page {
-    background-color: white;
+    position: relative;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+}
+
+.page::before {
+    content: "";
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/b/bc/BlankMap-World-Compact.svg');
+    background-repeat: repeat;
+    background-size: auto;
+    background-position: center;
+    background-attachment: fixed;
+    opacity: 0.3;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
 }
 
 .content-container {
@@ -738,8 +754,51 @@ body {
 }
 
 .map-container {
+    padding: 0 !important;
 }
 
 #mapid {
     height: 400px;
+}
+
+.weather-diagram-container {
+    width: fit-content;
+}
+
+.weather-diagram-title {
+    font-size: 1.2em;
+    font-weight: bold;
+    color: var(--darkgrey);
+    text-align: center;
+    margin-bottom: 10px;
+    background-color: yellow;
+}
+
+.weather-diagram-tooltip {
+    position: absolute;
+    text-align: left;
+    pointer-events: none;
+    background-color: rgba(100, 100, 100, 0.8);
+    color: #fff;
+    font-size: 0.8em;
+    padding: 5px;
+    border-radius: 6px;
+}
+
+.temperature-bar {
+    fill: var(--accent1);
+}
+
+.precipitation-bar {
+    fill: var(--accent8);
+}
+
+.weather-diagram-axis-label {
+    font-size: 12.8px;
+}
+
+.weather-diagram-axis-title{
+    font-size: 16px;
+    fill: var(--darkgrey);
+    font-weight: bold;
 }
