--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -696,6 +696,13 @@ body {
     flex-basis: 0;
 }
 
+.category-content-title {
+    font-size: 1.2em;
+    font-weight: bold;
+    color: var(--darkgrey);
+    margin-bottom: 10px;
+}
+
 .dimensions-figure-wrapper {
     display: flex;
     justify-content: flex-start;
@@ -806,11 +813,7 @@ body {
 }
 
 .weather-diagram-title {
-    font-size: 1.2em;
-    font-weight: bold;
-    color: var(--darkgrey);
     text-align: center;
-    margin-bottom: 10px;
 }
 
 .weather-diagram-tooltip {
