Change background color

--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -637,7 +637,7 @@ body {
 .tabcontent {
     display: none;
     width: 100%;
-    background-color: lightgreen;
+    background-color: var(--accent2);
     padding-top: 20px;
     color: var(--darkgrey);
 }
