--- a/src/frontend/destination_search/templates/list.html
+++ b/src/frontend/destination_search/templates/list.html
@@ -162,7 +162,7 @@ Results
 
     <!--- List of locations -->
     <div class="location-list-container">
-        {% for location in location_list %}
+        {% for location in locations_list %}
 
             <div class="location-list-item-container">
 
@@ -197,9 +197,9 @@ Results
     <div class="pagination-container">
         <nav aria-label="Page navigation">
             <ul class="pagination">
-                {% if location_list.has_previous %}
+                {% if locations_list.has_previous %}
                     <li class="page-item">
-                        <a class="page-link" href="#" onclick="setParam('page', {{ location_list.previous_page_number }}); return false;" aria-label="Previous">
+                        <a class="page-link" href="#" onclick="setParam('page', {{ locations_list.previous_page_number }}); return false;" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
@@ -211,31 +211,31 @@ Results
                     </li>
                 {% endif %}
 
-                {% if location_list.number > 2 %}
+                {% if locations_list.number > 2 %}
                     <li class="page-item"><a class="page-link" href="#" onclick="setParam('page', 1); return false;">1</a></li>
                 {% endif %}
 
-                {% if location_list.number > 3 %}
+                {% if locations_list.number > 3 %}
                     <li class="page-item disabled"><a class="page-link" href="#">...</a></li>
                 {% endif %}
 
-                {% for i in location_list.paginator.page_range %}
-                    {% if i >= location_list.number|add:"-1" and i <= location_list.number|add:"1" %}
-                        <li class="page-item {% if location_list.number == i %}active{% endif %}"><a class="page-link" href="#" onclick="setParam('page', {{ i }}); return false;">{{ i }}</a></li>
+                {% for i in locations_list.paginator.page_range %}
+                    {% if i >= locations_list.number|add:"-1" and i <= locations_list.number|add:"1" %}
+                        <li class="page-item {% if locations_list.number == i %}active{% endif %}"><a class="page-link" href="#" onclick="setParam('page', {{ i }}); return false;">{{ i }}</a></li>
                     {% endif %}
                 {% endfor %}
 
-                {% if location_list.number < location_list.paginator.num_pages|add:"-2" %}
+                {% if locations_list.number < locations_list.paginator.num_pages|add:"-2" %}
                     <li class="page-item disabled"><a class="page-link" href="#">...</a></li>
                 {% endif %}         
 
-                {% if location_list.number < location_list.paginator.num_pages|add:"-1" %}
-                    <li class="page-item"><a class="page-link" href="#" onclick="setParam('page', {{ location_list.paginator.num_pages }}); return false;">{{ location_list.paginator.num_pages }}</a></li>
+                {% if locations_list.number < locations_list.paginator.num_pages|add:"-1" %}
+                    <li class="page-item"><a class="page-link" href="#" onclick="setParam('page', {{ locations_list.paginator.num_pages }}); return false;">{{ locations_list.paginator.num_pages }}</a></li>
                 {% endif %}
 
-                {% if location_list.has_next %}
+                {% if locations_list.has_next %}
                     <li class="page-item">
-                        <a class="page-link" href="#" onclick="setParam('page', {{ location_list.next_page_number }}); return false;" aria-label="Next">
+                        <a class="page-link" href="#" onclick="setParam('page', {{ locations_list.next_page_number }}); return false;" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
